--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="utf8">
-		<title>Cloudflare Pages | Form Demo</title>
+		<title>Where is my Packet Pages | Form Demo</title>
 		<meta name="theme-color" content="#d86300">
 		<meta name="mobile-web-app-capable" content="yes">
 		<meta name="apple-mobile-web-app-capable" content="yes">
